syntax = "proto3";
option go_package = ".;databaseGrpc";
package databaseGrpc;

service PlayerService {
  rpc PlayerFindByPlayerId(PlayerFindByPlayerIdRequest) returns (PlayerFindByPlayerIdResponse) {}
  rpc PlayerAdd(PlayerAddRequest) returns (PlayerAddResponse) {}
}

message PlayerFindByPlayerIdRequest {
  int32 playerId = 1;
}

message PlayerFindByPlayerIdResponse {
  Player player = 1;
}

message PlayerAddRequest {
  Player player = 1;
}

message PlayerAddResponse {

}

message Player {
  int32 playerId = 2;
  string accountId = 3;
  int32 highestScore = 4;
  int32 highestRank = 5;
  int64 createAt = 6;
  int64 updateAt = 7;
}